@@ -29,6 +29,8 @@ import java.net.URISyntaxException;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantReadWriteLock;
 
 import org.apache.http.HttpException;
 
@@ -43,50 +45,59 @@ public class UrlCrawlQueue extends CrawlQueueAbstract<Crawl, UrlItem> {
 	private List<UrlItem> insertUrlList;
 	private List<String> deleteUrlList;
 
+	private List<Crawl> workingUpdateCrawlList;
+	private List<UrlItem> workingInsertUrlList;
+	private List<String> workingDeleteUrlList;
+
+	private final ReentrantReadWriteLock rwl = new ReentrantReadWriteLock(true);
+	private final Lock r = rwl.readLock();
+	private final Lock w = rwl.writeLock();
+
 	public UrlCrawlQueue(Config config) throws SearchLibException {
 		setConfig(config);
-		this.updateCrawlList = new ArrayList<Crawl>(0);
-		this.insertUrlList = new ArrayList<UrlItem>(0);
-		this.deleteUrlList = new ArrayList<String>(0);
+		updateCrawlList = new ArrayList<Crawl>(0);
+		insertUrlList = new ArrayList<UrlItem>(0);
+		deleteUrlList = new ArrayList<String>(0);
+		workingUpdateCrawlList = null;
+		workingInsertUrlList = null;
+		workingDeleteUrlList = null;
 	}
 
 	@Override
 	public void add(Crawl crawl) throws NoSuchAlgorithmException, IOException,
 			SearchLibException {
-		synchronized (updateCrawlList) {
+		r.lock();
+		try {
 			updateCrawlList.add(crawl);
-		}
-		List<String> discoverLinks = crawl.getDiscoverLinks();
-		synchronized (insertUrlList) {
+			List<String> discoverLinks = crawl.getDiscoverLinks();
 			if (discoverLinks != null) {
 				getSessionStats().addPendingNewUrlCount(discoverLinks.size());
 				for (String link : discoverLinks)
 					insertUrlList.add(new UrlItem(link));
 			}
+		} finally {
+			r.unlock();
 		}
 	}
 
 	@Override
 	public void delete(String url) {
-		synchronized (deleteUrlList) {
+		r.lock();
+		try {
 			deleteUrlList.add(url);
 			getSessionStats().incPendingDeletedCount();
+		} finally {
+			r.unlock();
 		}
 	}
 
 	private boolean shouldWePersist() {
-		synchronized (updateCrawlList) {
-			if (updateCrawlList.size() > getMaxBufferSize())
-				return true;
-		}
-		synchronized (deleteUrlList) {
-			if (deleteUrlList.size() > getMaxBufferSize())
-				return true;
-		}
-		synchronized (insertUrlList) {
-			if (insertUrlList.size() > getMaxBufferSize())
-				return true;
-		}
+		if (updateCrawlList.size() > getMaxBufferSize())
+			return true;
+		if (deleteUrlList.size() > getMaxBufferSize())
+			return true;
+		if (insertUrlList.size() > getMaxBufferSize())
+			return true;
 		return false;
 	}
 
@@ -96,34 +107,46 @@ public class UrlCrawlQueue extends CrawlQueueAbstract<Crawl, UrlItem> {
 	public void index(boolean bForce) throws SearchLibException, IOException,
 			URISyntaxException, InstantiationException, IllegalAccessException,
 			ClassNotFoundException, HttpException {
-		List<Crawl> workUpdateCrawlList;
-		List<UrlItem> workInsertUrlList;
-		List<String> workDeleteUrlList;
-		synchronized (this) {
+		w.lock();
+		try {
 			if (!bForce)
 				if (!shouldWePersist())
 					return;
-			workUpdateCrawlList = updateCrawlList;
-			workInsertUrlList = insertUrlList;
-			workDeleteUrlList = deleteUrlList;
+			if (workingUpdateCrawlList != null)
+				return;
+			if (workingInsertUrlList != null)
+				return;
+			if (workingDeleteUrlList != null)
+				return;
+			workingUpdateCrawlList = updateCrawlList;
+			workingInsertUrlList = insertUrlList;
+			workingDeleteUrlList = deleteUrlList;
 
 			updateCrawlList = new ArrayList<Crawl>(0);
 			insertUrlList = new ArrayList<UrlItem>(0);
 			deleteUrlList = new ArrayList<String>(0);
+		} finally {
+			w.unlock();
 		}
 
 		UrlManager urlManager = getConfig().getUrlManager();
-		// Synchronization to avoid simoultaneous indexation process
-		synchronized (indexSync) {
-			boolean needReload = false;
-			if (deleteCollection(workDeleteUrlList))
-				needReload = true;
-			if (updateCrawls(workUpdateCrawlList))
-				needReload = true;
-			if (insertCollection(workInsertUrlList))
-				needReload = true;
-			if (needReload)
-				urlManager.reload(false);
+		boolean needReload = false;
+		if (deleteCollection(workingDeleteUrlList))
+			needReload = true;
+		if (updateCrawls(workingUpdateCrawlList))
+			needReload = true;
+		if (insertCollection(workingInsertUrlList))
+			needReload = true;
+		if (needReload)
+			urlManager.reload(false);
+
+		w.lock();
+		try {
+			workingUpdateCrawlList = null;
+			workingInsertUrlList = null;
+			workingDeleteUrlList = null;
+		} finally {
+			w.unlock();
 		}
 	}
 
